# dis-gateway

./: CMakeLists.txt  README.md  config.json
config/: example_rules.conf  passthrough_rules.conf
include/: dis_types.h  gateway.h  multicast_socket.h  pdu_codec.h  rule_engine.h
src/: gateway.cpp  gateway.hpp  main.cpp  multicast_socket.cpp  pdu_codec.cpp  rule_engine.cpp
src/dis/: byte_buffer.hpp  codec.cpp  codec.hpp  enums.hpp  pdus.hpp  types.hpp
src/net/: udp_socket.cpp  udp_socket.hpp
src/rules/: field_accessor.cpp  field_accessor.hpp  rule_engine.cpp  rule_engine.hpp
